[gd_scene load_steps=4 format=2]

[ext_resource path="res://characters/character.tscn" type="PackedScene" id=1]
[ext_resource path="res://characters/player.gd" type="Script" id=2]
[ext_resource path="res://characters/attack_alerts/mask.png" type="Texture" id=3]

[node name="player" instance=ExtResource( 1 )]
script = ExtResource( 2 )
strength = 6
speed = 150

[node name="camera" type="Camera2D" parent="." index="0"]
current = true
smoothing_enabled = true
smoothing_speed = 4.0

[node name="shake_tween" type="Tween" parent="." index="1"]

[node name="shake_timer" type="Timer" parent="." index="2"]
one_shot = true

[node name="background_light" type="Light2D" parent="." index="3"]
texture = ExtResource( 3 )
texture_scale = 3.0
energy = 0.0
shadow_enabled = true

[node name="polygon" parent="." index="5"]
color = Color( 0, 0.5, 0, 1 )
[connection signal="tween_completed" from="shake_tween" to="." method="_on_shake_tween_tween_completed"]
[connection signal="timeout" from="shake_timer" to="." method="_on_shake_timer_timeout"]
